#Based on a nice template provided by Karlheinz Wohlmuth.
project(yagi)
cmake_minimum_required(VERSION 2.6)

include_directories("src")

set(CPP11_EXTRA_FLAGS "")

list(APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CPP11_EXTRA_FLAGS} ${CMAKE_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CPP11_EXTRA_FLAGS}")

add_executable(yagi
src/front-end/astVisitors/ToStringVisitor.cpp
src/front-end/YAGIMain.cpp
src/front-end/astClasses/ASTBuilder.cpp
src/back-end/ToGologVisitor.cpp
src/common/ASTNodeTypes/Expressions/NodeSetExpression.cpp
src/common/ASTNodeTypes/Expressions/NodeValueExpressionOperator.cpp
src/common/ASTNodeTypes/Expressions/NodeSetExpressionOperator.cpp
src/common/ASTNodeTypes/Expressions/NodeValueExpression.cpp
src/common/ASTNodeTypes/Assignment/NodeFluentAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeConditionalAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeForLoopAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeVariableAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeAssignmentBase.cpp
src/common/ASTNodeTypes/Variables/NodeVariable.cpp
src/common/ASTNodeTypes/Variables/NodeVarList.cpp
src/common/ASTNodeTypes/Declarations/ProcDecl/NodeProcDecl.cpp
src/common/ASTNodeTypes/Declarations/FluentDecl/NodeFluentDecl.cpp
src/common/ASTNodeTypes/Declarations/PassiveSensing/NodePassiveSensingDecl.cpp
src/common/ASTNodeTypes/Declarations/FactDecl/NodeFactDecl.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeSignal.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActiveSensing.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionDecl.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionPrecondition.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionEffect.cpp
src/common/ASTNodeTypes/Statements/NodePick.cpp
src/common/ASTNodeTypes/Statements/NodeChoose.cpp
src/common/ASTNodeTypes/Statements/NodeConditional.cpp
src/common/ASTNodeTypes/Statements/NodeStatementBase.cpp
src/common/ASTNodeTypes/Statements/NodeWhileLoop.cpp
src/common/ASTNodeTypes/Statements/NodeActionExecution.cpp
src/common/ASTNodeTypes/Statements/NodeTest.cpp
src/common/ASTNodeTypes/Statements/NodeSearch.cpp
src/common/ASTNodeTypes/Statements/NodeForLoop.cpp
src/common/ASTNodeTypes/Statements/NodeBlock.cpp
src/common/ASTNodeTypes/ProgramStructure/NodeProgram.cpp
src/common/ASTNodeTypes/Set/NodeSet.cpp
src/common/ASTNodeTypes/Formula/NodeQuantifiedFormula.cpp
src/common/ASTNodeTypes/Formula/NodeFormulaBase.cpp
src/common/ASTNodeTypes/Formula/NodeAtom.cpp
src/common/ASTNodeTypes/Formula/NodeConstant.cpp
src/common/ASTNodeTypes/Formula/NodeAtomConnective.cpp
src/common/ASTNodeTypes/Formula/NodeOperatorIn.cpp
src/common/ASTNodeTypes/Formula/NodeNegation.cpp
src/common/ASTNodeTypes/Formula/NodeCompoundFormula.cpp
src/common/ASTNodeTypes/Formula/NodeFormulaConnective.cpp
src/common/ASTNodeTypes/Identifier/NodeID.cpp
src/common/ASTNodeTypes/Domains/NodeDomainInteger.cpp
src/common/ASTNodeTypes/Domains/NodeDomainStringElements.cpp
src/common/ASTNodeTypes/Domains/NodeDomainString.cpp
src/common/ASTNodeTypes/DataTypes/NodeString.cpp
src/common/ASTNodeTypes/DataTypes/NodeValueList.cpp
src/common/ASTNodeTypes/DataTypes/NodeInteger.cpp
src/common/ASTNodeTypes/DataTypes/NodePatternMatching.cpp
src/common/ASTNodeTypes/ASTNodeBase.cpp
src/common/ASTNodeTypes/Tuple/NodeTuple.cpp
src/front-end/astVisitors/ToStringVisitor.h
src/front-end/astClasses/ASTBuilder.h
src/front-end/astClasses/YAGICallbackConnector.h
src/front-end/cppInterfaceClasses/CToCppBridge.h
src/front-end/autoGenerated/YAGILexer.h
src/front-end/autoGenerated/YAGIParser.h
src/front-end/autoGenerated/YAGITreeWalker.h
src/back-end/ToGologVisitor.h
src/utils/make_unique.h
src/common/ASTNodeTypes/Expressions/NodeValueExpression.h
src/common/ASTNodeTypes/Expressions/NodeSetExpression.h
src/common/ASTNodeTypes/Expressions/NodeValueExpressionOperator.h
src/common/ASTNodeTypes/Expressions/NodeSetExpressionOperator.h
src/common/ASTNodeTypes/ASTNodeBase.h
src/common/ASTNodeTypes/Assignment/NodeForLoopAssignment.h
src/common/ASTNodeTypes/Assignment/NodeAssignmentBase.h
src/common/ASTNodeTypes/Assignment/NodeConditionalAssignment.h
src/common/ASTNodeTypes/Assignment/NodeFluentAssignment.h
src/common/ASTNodeTypes/Assignment/NodeVariableAssignment.h
src/common/ASTNodeTypes/Variables/NodeVariable.h
src/common/ASTNodeTypes/Variables/NodeVarList.h
src/common/ASTNodeTypes/Declarations/ProcDecl/NodeProcDecl.h
src/common/ASTNodeTypes/Declarations/FluentDecl/NodeFluentDecl.h
src/common/ASTNodeTypes/Declarations/PassiveSensing/NodePassiveSensingDecl.h
src/common/ASTNodeTypes/Declarations/FactDecl/NodeFactDecl.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionEffect.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionPrecondition.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionDecl.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeSignal.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActiveSensing.h
src/common/ASTNodeTypes/Statements/NodeBlock.h
src/common/ASTNodeTypes/Statements/NodeSearch.h
src/common/ASTNodeTypes/Statements/NodeForLoop.h
src/common/ASTNodeTypes/Statements/NodeChoose.h
src/common/ASTNodeTypes/Statements/NodePick.h
src/common/ASTNodeTypes/Statements/NodeTest.h
src/common/ASTNodeTypes/Statements/NodeActionExecution.h
src/common/ASTNodeTypes/Statements/NodeStatementBase.h
src/common/ASTNodeTypes/Statements/NodeConditional.h
src/common/ASTNodeTypes/Statements/NodeWhileLoop.h
src/common/ASTNodeTypes/ProgramStructure/NodeProgram.h
src/common/ASTNodeTypes/Set/NodeSet.h
src/common/ASTNodeTypes/Formula/NodeConstant.h
src/common/ASTNodeTypes/Formula/NodeNegation.h
src/common/ASTNodeTypes/Formula/NodeCompoundFormula.h
src/common/ASTNodeTypes/Formula/NodeAtom.h
src/common/ASTNodeTypes/Formula/NodeFormulaConnective.h
src/common/ASTNodeTypes/Formula/NodeQuantifiedFormula.h
src/common/ASTNodeTypes/Formula/NodeFormulaBase.h
src/common/ASTNodeTypes/Formula/NodeOperatorIn.h
src/common/ASTNodeTypes/Formula/NodeAtomConnective.h
src/common/ASTNodeTypes/Identifier/NodeID.h
src/common/ASTNodeTypes/Domains/NodeDomainStringElements.h
src/common/ASTNodeTypes/Domains/NodeDomainString.h
src/common/ASTNodeTypes/Domains/NodeDomainInteger.h
src/common/ASTNodeTypes/Domains/NodeDomainBase.h
src/common/ASTNodeTypes/DataTypes/NodePatternMatching.h
src/common/ASTNodeTypes/DataTypes/NodeValueList.h
src/common/ASTNodeTypes/DataTypes/NodeInteger.h
src/common/ASTNodeTypes/DataTypes/NodeString.h
src/common/ASTNodeTypes/Tuple/NodeTuple.h
src/common/ASTNodeVisitorBase.h
src/front-end/autoGenerated/YAGILexer.c
src/front-end/autoGenerated/YAGIParser.c
src/front-end/autoGenerated/YAGITreeWalker.c
src/front-end/ANTLRParser.h
src/front-end/ANTLRParser.cpp
)

add_executable(yagi-unitTests
src/front-end/astVisitors/ToStringVisitor.cpp
src/front-end/astClasses/ASTBuilder.cpp
src/back-end/ToGologVisitor.cpp
src/common/ASTNodeTypes/Expressions/NodeSetExpression.cpp
src/common/ASTNodeTypes/Expressions/NodeValueExpressionOperator.cpp
src/common/ASTNodeTypes/Expressions/NodeSetExpressionOperator.cpp
src/common/ASTNodeTypes/Expressions/NodeValueExpression.cpp
src/common/ASTNodeTypes/Assignment/NodeFluentAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeConditionalAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeForLoopAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeVariableAssignment.cpp
src/common/ASTNodeTypes/Assignment/NodeAssignmentBase.cpp
src/common/ASTNodeTypes/Variables/NodeVariable.cpp
src/common/ASTNodeTypes/Variables/NodeVarList.cpp
src/common/ASTNodeTypes/Declarations/ProcDecl/NodeProcDecl.cpp
src/common/ASTNodeTypes/Declarations/FluentDecl/NodeFluentDecl.cpp
src/common/ASTNodeTypes/Declarations/PassiveSensing/NodePassiveSensingDecl.cpp
src/common/ASTNodeTypes/Declarations/FactDecl/NodeFactDecl.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeSignal.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActiveSensing.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionDecl.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionPrecondition.cpp
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionEffect.cpp
src/common/ASTNodeTypes/Statements/NodePick.cpp
src/common/ASTNodeTypes/Statements/NodeChoose.cpp
src/common/ASTNodeTypes/Statements/NodeConditional.cpp
src/common/ASTNodeTypes/Statements/NodeStatementBase.cpp
src/common/ASTNodeTypes/Statements/NodeWhileLoop.cpp
src/common/ASTNodeTypes/Statements/NodeActionExecution.cpp
src/common/ASTNodeTypes/Statements/NodeTest.cpp
src/common/ASTNodeTypes/Statements/NodeSearch.cpp
src/common/ASTNodeTypes/Statements/NodeForLoop.cpp
src/common/ASTNodeTypes/Statements/NodeBlock.cpp
src/common/ASTNodeTypes/ProgramStructure/NodeProgram.cpp
src/common/ASTNodeTypes/Set/NodeSet.cpp
src/common/ASTNodeTypes/Formula/NodeQuantifiedFormula.cpp
src/common/ASTNodeTypes/Formula/NodeFormulaBase.cpp
src/common/ASTNodeTypes/Formula/NodeAtom.cpp
src/common/ASTNodeTypes/Formula/NodeConstant.cpp
src/common/ASTNodeTypes/Formula/NodeAtomConnective.cpp
src/common/ASTNodeTypes/Formula/NodeOperatorIn.cpp
src/common/ASTNodeTypes/Formula/NodeNegation.cpp
src/common/ASTNodeTypes/Formula/NodeCompoundFormula.cpp
src/common/ASTNodeTypes/Formula/NodeFormulaConnective.cpp
src/common/ASTNodeTypes/Identifier/NodeID.cpp
src/common/ASTNodeTypes/Domains/NodeDomainInteger.cpp
src/common/ASTNodeTypes/Domains/NodeDomainStringElements.cpp
src/common/ASTNodeTypes/Domains/NodeDomainString.cpp
src/common/ASTNodeTypes/DataTypes/NodeString.cpp
src/common/ASTNodeTypes/DataTypes/NodeValueList.cpp
src/common/ASTNodeTypes/DataTypes/NodeInteger.cpp
src/common/ASTNodeTypes/DataTypes/NodePatternMatching.cpp
src/common/ASTNodeTypes/ASTNodeBase.cpp
src/common/ASTNodeTypes/Tuple/NodeTuple.cpp
src/front-end/astVisitors/ToStringVisitor.h
src/front-end/astClasses/ASTBuilder.h
src/front-end/astClasses/YAGICallbackConnector.h
src/front-end/cppInterfaceClasses/CToCppBridge.h
src/front-end/autoGenerated/YAGILexer.h
src/front-end/autoGenerated/YAGIParser.h
src/front-end/autoGenerated/YAGITreeWalker.h
src/back-end/ToGologVisitor.h
src/utils/make_unique.h
src/common/ASTNodeTypes/Expressions/NodeValueExpression.h
src/common/ASTNodeTypes/Expressions/NodeSetExpression.h
src/common/ASTNodeTypes/Expressions/NodeValueExpressionOperator.h
src/common/ASTNodeTypes/Expressions/NodeSetExpressionOperator.h
src/common/ASTNodeTypes/ASTNodeBase.h
src/common/ASTNodeTypes/Assignment/NodeForLoopAssignment.h
src/common/ASTNodeTypes/Assignment/NodeAssignmentBase.h
src/common/ASTNodeTypes/Assignment/NodeConditionalAssignment.h
src/common/ASTNodeTypes/Assignment/NodeFluentAssignment.h
src/common/ASTNodeTypes/Assignment/NodeVariableAssignment.h
src/common/ASTNodeTypes/Variables/NodeVariable.h
src/common/ASTNodeTypes/Variables/NodeVarList.h
src/common/ASTNodeTypes/Declarations/ProcDecl/NodeProcDecl.h
src/common/ASTNodeTypes/Declarations/FluentDecl/NodeFluentDecl.h
src/common/ASTNodeTypes/Declarations/PassiveSensing/NodePassiveSensingDecl.h
src/common/ASTNodeTypes/Declarations/FactDecl/NodeFactDecl.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionEffect.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionPrecondition.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActionDecl.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeSignal.h
src/common/ASTNodeTypes/Declarations/ActionDecl/NodeActiveSensing.h
src/common/ASTNodeTypes/Statements/NodeBlock.h
src/common/ASTNodeTypes/Statements/NodeSearch.h
src/common/ASTNodeTypes/Statements/NodeForLoop.h
src/common/ASTNodeTypes/Statements/NodeChoose.h
src/common/ASTNodeTypes/Statements/NodePick.h
src/common/ASTNodeTypes/Statements/NodeTest.h
src/common/ASTNodeTypes/Statements/NodeActionExecution.h
src/common/ASTNodeTypes/Statements/NodeStatementBase.h
src/common/ASTNodeTypes/Statements/NodeConditional.h
src/common/ASTNodeTypes/Statements/NodeWhileLoop.h
src/common/ASTNodeTypes/ProgramStructure/NodeProgram.h
src/common/ASTNodeTypes/Set/NodeSet.h
src/common/ASTNodeTypes/Formula/NodeConstant.h
src/common/ASTNodeTypes/Formula/NodeNegation.h
src/common/ASTNodeTypes/Formula/NodeCompoundFormula.h
src/common/ASTNodeTypes/Formula/NodeAtom.h
src/common/ASTNodeTypes/Formula/NodeFormulaConnective.h
src/common/ASTNodeTypes/Formula/NodeQuantifiedFormula.h
src/common/ASTNodeTypes/Formula/NodeFormulaBase.h
src/common/ASTNodeTypes/Formula/NodeOperatorIn.h
src/common/ASTNodeTypes/Formula/NodeAtomConnective.h
src/common/ASTNodeTypes/Identifier/NodeID.h
src/common/ASTNodeTypes/Domains/NodeDomainStringElements.h
src/common/ASTNodeTypes/Domains/NodeDomainString.h
src/common/ASTNodeTypes/Domains/NodeDomainInteger.h
src/common/ASTNodeTypes/Domains/NodeDomainBase.h
src/common/ASTNodeTypes/DataTypes/NodePatternMatching.h
src/common/ASTNodeTypes/DataTypes/NodeValueList.h
src/common/ASTNodeTypes/DataTypes/NodeInteger.h
src/common/ASTNodeTypes/DataTypes/NodeString.h
src/common/ASTNodeTypes/Tuple/NodeTuple.h
src/common/ASTNodeVisitorBase.h
src/front-end/autoGenerated/YAGILexer.c
src/front-end/autoGenerated/YAGIParser.c
src/front-end/autoGenerated/YAGITreeWalker.c
src/front-end/ANTLRParser.h
src/front-end/ANTLRParser.cpp
src/unitTests/UnitTestMain.cpp
src/unitTests/TestFluentDecl.cc
)

set(EXTRA_LINK_LIBS m antlr3c readline)
target_link_libraries(yagi ${EXTRA_LINK_LIBS})
